objects/CMN_CommunicationTemplate__c.object
<CustomObject>
    <description>Represents a Communication Template, provides friendly name and maps to the a template in Papyrus.</description>
    <fields>
        <fullName>CMN_APIName__c</fullName>
        <description>Name of the API to be called by the Webservice Manager</description>
        <label>API Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Code__c</fullName>
        <description>The External reference for the Template</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_CommunicationsLabel__c</fullName>
        <description>Field used to hold the wording of the email template to be sent to Papyrus with the Communication API structure.</description>
        <label>Communications Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_DocumentName__c</fullName>
        <description>Document Name for the email template.</description>
        <label>Document Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_SelectorClassName__c</fullName>
        <description>Selector class based off CMN_DAL_BaseTemplateSelector that is responsible for retrieving the data required for the template</description>
        <label>Selector Class Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Communication Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CMN_Code__c</columns>
        <columns>CMN_SelectorClassName__c</columns>
        <columns>CMN_APIName__c</columns>
        <columns>CMN_DocumentName__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communication Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>